# bafangce-financial-cockpit

./: .gitignore  API_desc.md  DATA_SYNC_OPTIMIZATION_SUMMARY.md  LOF_IMPLEMENTATION_SUMMARY.md  MANUAL_PRICE_FEATURE.md  MANUAL_PRICE_UPDATE_IMPLEMENTATION.md  OPEN_FUND_ERROR_FIXES.md  OPEN_FUND_IMPLEMENTATION_SUMMARY.md  README.md  START_GUIDE.md  TEST_MANUAL_PRICE.md  enhance.md  main.py  plan.md  pyproject.toml  requirements.txt  start.bat  start.py  start.sh  stop.bat  test_add_holding.py  test_baostock_login.py  test_settings_api.py
backend/: __init__.py  app.py  kill_server.py  pyproject.toml  run.py
backend/API_test/: etf_fund_daily_test.py  lof_test.py  open_fund_test.py  stock_test.py
backend/api/: portfolio.py  settings.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  ai.py  asset_categories.py  assets.py  assets.py_manual_price_update.py  assets_manual_price_update.py  auth.py  portfolios.py  strategies.py  strategy_groups.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  ai_suggestion.py  asset.py  asset_category_mapping.py  enums.py  portfolio.py  strategy.py  user.py
backend/config/: constants.py  settings.py
backend/core/: __init__.py  akshare_client.py  asset_allocation.py  calculator.py  data_fetcher.py  database.py  holdings_manager.py  portfolio.py
backend/data/: portfolio.db
backend/db/: .gitignore
backend/migrations/: drop_allocation_amount.py
backend/models/: __init__.py  holding.py  product.py
backend/scripts/: add_manual_price_columns.py
backend/utils/: helpers.py
(+84 files in other folders)
