[project]
name = "bafangce-financial-cockpit"
version = "0.1.0"
description = "Personal financial cockpit"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "akshare>=1.17.91",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "baostock>=0.8.9",
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",
]
